--- a/examples/openstack-machinedeployment.yaml
+++ b/examples/openstack-machinedeployment.yaml
@@ -58,6 +58,18 @@ spec:
                 namespace: kube-system
                 name: machine-controller-openstack
                 key: identityEndpoint
+          # If empty, can be set via OS_APPLICATION_CREDENTIAL_ID env var
+            applicationCredentialID:
+              secretKeyRef:
+                namespace: kube-system
+                name: machine-controller-openstack
+                key: applicationCredentialID
+          # If empty, can be set via OS_APPLICATION_CREDENTIAL_SECRET env var
+            applicationCredentialSecret:
+              secretKeyRef:
+                namespace: kube-system
+                name: machine-controller-openstack
+                key: applicationCredentialSecret
           # If empty, can be set via OS_USER_NAME env var
             username:
               secretKeyRef:
