--- a/.prow.yaml
+++ b/.prow.yaml
@@ -70,6 +70,34 @@ presubmits:
             requests:
               cpu: 200m
 
+  - name: pre-machine-controller-verify-shfmt
+    run_if_changed: "^hack/"
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    spec:
+      containers:
+      - image: docker.io/mvdan/shfmt:v3.2.1
+        command:
+        - "/bin/shfmt"
+        args:
+        #   -l        list files whose formatting differs from shfmt's
+        #   -d        error with a diff when the formatting differs
+        #   -i uint   indent: 0 for tabs (default), >0 for number of spaces
+        #   -sr       redirect operators will be followed by a space
+        - "-l"
+        - "-sr"
+        - "-i"
+        - "2"
+        - "-d"
+        - "hack"
+        resources:
+          requests:
+            memory: 32Mi
+            cpu: 50m
+          limits:
+            memory: 256Mi
+            cpu: 250m
+
   - name: pull-machine-controller-verify-boilerplate
     always_run: true
     decorate: true
