--- a/pkg/userdata/centos/testdata/kubelet-v1.17-vsphere.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.17-vsphere.yaml
@@ -101,7 +101,7 @@ write_files:
     yum install -y \
         docker-ce-19.03.13 \
         docker-ce-cli-19.03.13 \
-        containerd.io-1.4.3 \
+        containerd.io-1.4.3-1 \
         yum-plugin-versionlock
     yum versionlock add docker-ce-* containerd.io
 
