--- a/pkg/userdata/ubuntu/testdata/containerd.yaml
+++ b/pkg/userdata/ubuntu/testdata/containerd.yaml
@@ -93,7 +93,7 @@ write_files:
     apt-get install -y apt-transport-https ca-certificates curl software-properties-common lsb-release
     curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
     add-apt-repository "deb https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-    apt-get install -y containerd.io=1.4.3*
+    apt-get install -y containerd.io=1.4.3-1*
 
     cat <<EOF | tee /etc/crictl.yaml
     runtime-endpoint: unix:///run/containerd/containerd.sock
