--- a/pkg/userdata/ubuntu/testdata/vsphere.yaml
+++ b/pkg/userdata/ubuntu/testdata/vsphere.yaml
@@ -102,7 +102,7 @@ write_files:
     EOF
 
     apt-get install -y \
-        containerd.io=1.4.3* \
+        containerd.io=1.4.3-1* \
         docker-ce=5:19.03.13* \
         docker-ce-cli=5:19.03.13*
     apt-mark hold docker-ce docker-ce-cli containerd.io
