--- a/.prow.yaml
+++ b/.prow.yaml
@@ -739,6 +739,28 @@ presubmits:
               memory: 1Gi
               cpu: 500m
 
+  - name: pull-machine-controller-e2e-aws-amzn2
+    always_run: false
+    decorate: true
+    error_on_eviction: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-aws: "true"
+      preset-hetzner: "true"
+      preset-e2e-ssh: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: golang:1.16.1
+          command:
+            - "./hack/ci-e2e-test.sh"
+          args:
+            - "TestAWSAmzn2ProvisioningE2E"
+          resources:
+            requests:
+              memory: 1Gi
+              cpu: 500m
+
   - name: pull-machine-controller-e2e-vsphere-datastore-cluster
     always_run: false
     decorate: true
