--- a/pkg/userdata/ubuntu/testdata/multiple-dns-servers.yaml
+++ b/pkg/userdata/ubuntu/testdata/multiple-dns-servers.yaml
@@ -102,9 +102,9 @@ write_files:
 
     apt-get install -y \
         containerd.io=1.4* \
-        docker-ce-cli=5:19.03*
+        docker-ce-cli=5:19.03* \
         docker-ce=5:19.03*
-    apt-mark hold docker-ce docker-ce-cli containerd.io
+    apt-mark hold docker-ce* containerd.io
 
     systemctl daemon-reload
     systemctl enable --now docker
