--- a/pkg/userdata/amzn2/testdata/kubelet-v1.16-aws.yaml
+++ b/pkg/userdata/amzn2/testdata/kubelet-v1.16-aws.yaml
@@ -362,7 +362,7 @@ write_files:
 - path: /etc/docker/daemon.json
   permissions: "0644"
   content: |
-    {"exec-opts":["native.cgroupdriver=systemd"],"storage-driver":"overlay2","log-driver":"json-file","log-opts":{"max-size":"100m"}}
+    {"exec-opts":["native.cgroupdriver=systemd"],"storage-driver":"overlay2","log-driver":"json-file","log-opts":{"max-file":"5","max-size":"10m"}}
 
 - path: /etc/systemd/system/kubelet-healthcheck.service
   permissions: "0644"
