--- a/pkg/userdata/ubuntu/testdata/openstack.yaml
+++ b/pkg/userdata/ubuntu/testdata/openstack.yaml
@@ -50,6 +50,12 @@ write_files:
     # Enable cgroups memory and swap accounting
     GRUB_CMDLINE_LINUX="cgroup_enable=memory swapaccount=1"
 
+- path: "/etc/systemd/resolved.conf"
+  content: |
+    # Updated by kubermatic machine-controller
+    # Disables systemd-resolved listener.
+    DNSStubListener=no
+
 - path: "/opt/bin/setup"
   permissions: "0755"
   content: |
@@ -57,6 +63,8 @@ write_files:
     set -xeuo pipefail
     if systemctl is-active ufw; then systemctl stop ufw; fi
     systemctl mask ufw
+    systemctl stop systemd-resolved
+    ln -sf /run/systemd/resolve/resolv.conf /etc/resolv.conf
     systemctl restart systemd-modules-load.service
     sysctl --system
     sed -i.orig '/.*swap.*/d' /etc/fstab
