--- a/pkg/userdata/ubuntu/testdata/version-1.20.1.yaml
+++ b/pkg/userdata/ubuntu/testdata/version-1.20.1.yaml
@@ -54,6 +54,7 @@ write_files:
   content: |
     # Updated by kubermatic machine-controller
     # Disables systemd-resolved listener.
+    [Resolve]
     DNSStubListener=no
 
 - path: "/opt/bin/setup"
