--- a/pkg/userdata/ubuntu/testdata/vsphere-proxy.yaml
+++ b/pkg/userdata/ubuntu/testdata/vsphere-proxy.yaml
@@ -63,6 +63,7 @@ write_files:
   content: |
     # Updated by kubermatic machine-controller
     # Disables systemd-resolved listener.
+    [Resolve]
     DNSStubListener=no
 
 - path: "/opt/bin/setup"
