--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -1,107 +1,157 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: machines.cluster.k8s.io
   labels:
     local-testing: "true"
+  annotations:
+    api-approved.kubernetes.io: "unapproved, temporarily squatting"
 spec:
   group: cluster.k8s.io
-  version: v1alpha1
   scope: Namespaced
   names:
     kind: Machine
     plural: machines
-  additionalPrinterColumns:
-  - name: Provider
-    type: string
-    JSONPath: .spec.providerSpec.value.cloudProvider
-  - name: OS
-    type: string
-    JSONPath: .spec.providerSpec.value.operatingSystem
-  - name: Address
-    type: string
-    JSONPath: .status.addresses[0].address
-  - name: Age
-    type: date
-    JSONPath: .metadata.creationTimestamp
-
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              x-kubernetes-preserve-unknown-fields: true
+      subresources:
+        # status enables the status subresource.
+        status: {}
+      additionalPrinterColumns:
+      - name: Provider
+        type: string
+        jsonPath: .spec.providerSpec.value.cloudProvider
+      - name: OS
+        type: string
+        jsonPath: .spec.providerSpec.value.operatingSystem
+      - name: Address
+        type: string
+        jsonPath: .status.addresses[0].address
+      - name: Age
+        type: date
+        jsonPath: .metadata.creationTimestamp
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: machinesets.cluster.k8s.io
   labels:
     local-testing: "true"
+  annotations:
+    api-approved.kubernetes.io: "unapproved, temporarily squatting"
 spec:
   group: cluster.k8s.io
-  version: v1alpha1
   scope: Namespaced
   names:
     kind: MachineSet
     plural: machinesets
-  subresources:
-     # status enables the status subresource.
-     status: {}
-  additionalPrinterColumns:
-  - name: Replicas
-    type: integer
-    JSONPath: .spec.replicas
-  - name: Provider
-    type: string
-    JSONPath: .spec.template.spec.providerSpec.value.cloudProvider
-  - name: OS
-    type: string
-    JSONPath: .spec.template.spec.providerSpec.value.operatingSystem
-  - name: Age
-    type: date
-    JSONPath: .metadata.creationTimestamp
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              x-kubernetes-preserve-unknown-fields: true
+      subresources:
+        # status enables the status subresource.
+        status: {}
+      additionalPrinterColumns:
+      - name: Replicas
+        type: integer
+        jsonPath: .spec.replicas
+      - name: Provider
+        type: string
+        jsonPath: .spec.template.spec.providerSpec.value.cloudProvider
+      - name: OS
+        type: string
+        jsonPath: .spec.template.spec.providerSpec.value.operatingSystem
+      - name: Age
+        type: date
+        jsonPath: .metadata.creationTimestamp
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: machinedeployments.cluster.k8s.io
   labels:
     local-testing: "true"
+  annotations:
+    api-approved.kubernetes.io: "unapproved, temporarily squatting"
 spec:
   group: cluster.k8s.io
-  version: v1alpha1
   scope: Namespaced
   names:
     kind: MachineDeployment
     plural: machinedeployments
-  subresources:
-     # status enables the status subresource.
-     status: {}
-  additionalPrinterColumns:
-  - name: Replicas
-    type: integer
-    JSONPath: .spec.replicas
-  - name: Provider
-    type: string
-    JSONPath: .spec.template.spec.providerSpec.value.cloudProvider
-  - name: OS
-    type: string
-    JSONPath: .spec.template.spec.providerSpec.value.operatingSystem
-  - name: Age
-    type: date
-    JSONPath: .metadata.creationTimestamp
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              x-kubernetes-preserve-unknown-fields: true
+      subresources:
+        # status enables the status subresource.
+        status: {}
+      additionalPrinterColumns:
+      - name: Replicas
+        type: integer
+        jsonPath: .spec.replicas
+      - name: Provider
+        type: string
+        jsonPath: .spec.template.spec.providerSpec.value.cloudProvider
+      - name: OS
+        type: string
+        jsonPath: .spec.template.spec.providerSpec.value.operatingSystem
+      - name: Age
+        type: date
+        jsonPath: .metadata.creationTimestamp
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: clusters.cluster.k8s.io
   labels:
     local-testing: "true"
+  annotations:
+    api-approved.kubernetes.io: "unapproved, temporarily squatting"
 spec:
   group: cluster.k8s.io
-  version: v1alpha1
   scope: Namespaced
   names:
     kind: Cluster
     plural: clusters
-  subresources:
-     # status enables the status subresource.
-     status: {}
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              x-kubernetes-preserve-unknown-fields: true
+      subresources:
+        # status enables the status subresource.
+        status: {}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
